rework, improvements, added pemission checking, centralized response and error handling
