# controllers/apiv2/profiles/index.js
@@ -1,6 +1,9 @@
-const { ROLE, User, Profile } = require('../../../../model')
-const { verifyJWT } = require('../../../../middleware/authJwt')
-const { authRole } = require('../../../../middleware/authRole')
+const express = require('express')
+const router = express.Router()
+
+const { ROLE, User, Profile } = require('../../../model')
+const { verifyJWT } = require('../../../middleware/authJwt')
+const { authRole } = require('../../../middleware/authRole')
 
 const getProfileByUserId = async (req, res, next) => {
     try {
@@ -8,8 +11,7 @@ const getProfileByUserId = async (req, res, next) => {
         let option = {}
         option.where = { userid: id }
         const result = await Profile.findUnique(option)
-        req.result = result
-        next()
+        res.json(result)
     } catch (err) {
         next(err)
     }
@@ -22,8 +24,7 @@ const getProfileByUserName = async (req, res, next) => {
         option.where = { username: username }
         option.select = { profile: true }
         const result = await User.findUnique(option)
-        req.result = result
-        next()
+        res.json(result.profile)
     } catch (err) {
         next(err)
     }
@@ -38,8 +39,7 @@ const updateProfileByUserId = async (req, res, next) => {
         option.where = { userid: id }
         option.data = { name, address, photoprofile }
         const result = await Profile.update(option)
-        req.result = result
-        next()
+        res.json(result)
     } catch (err) {
         next(err)
     }
@@ -50,34 +50,30 @@ const updateProfileByUserName = async (req, res, next) => {
         const username = req.params.username
         const { name, address, photoprofile } = req.body
         let option = {}
-        option.where = { username: username }
+        option.include = { User: true }
+        option.include.where = { username: username }
         option.data = { name, address, photoprofile }
-        // option.data.profile = { name, address, photoprofile }
         const result = await Profile.update(option)
-        req.result = result
-        next()
+        res.json(result)
     } catch (err) {
         next(err)
     }
 }
 
-module.exports = routes => {
-    // disini sama dengan baseurl/api/users/profile
-    routes.get('/id/:id',
-        getProfileByUserId
-    );
+router.get('/id/:id',
+    getProfileByUserId
+);
 
-    routes.get('/username/:username',
-        getProfileByUserName
-    );
+router.get('/username/:username',
+    getProfileByUserName
+);
 
-    routes.put('/id/:id',
-        verifyJWT,
-        updateProfileByUserId
-    );
+router.put('/id/:id',
+    updateProfileByUserId
+);
 
-    routes.put('/username/:username',
-        verifyJWT,
-        updateProfileByUserName
-    );
-}
+router.put('/username/:username',
+    updateProfileByUserName
+);
+
+module.exports = router
