# swagger.yml
@@ -65,13 +65,13 @@ paths:
               properties:
                 username:
                   type: string
-                  example: 'Arman'
+                  example: 'jokox'
                 email:
                   type: string
-                  example: 'arman@maulana.com'
+                  example: 'jkx@mantab.io'
                 password:
                   type: string
-                  example: 'Arman123?'
+                  example: 'Pass123?'
       responses:
         default:
           description: successful operation
@@ -94,17 +94,17 @@ paths:
               properties:
                 username:
                   type: string
-                  example: 'Arman'
+                  example: 'arman'
                 password:
                   type: string
-                  example: 'Arman123?'
+                  example: 'Pass123?'
       responses:
         default:
           description: successful operation
           content: {}
       x-codegen-request-body-name: body
 
-  /users/profile/{userid}:
+  /users/profile/id/{id}:
     get:
       tags:
         - Profile
@@ -112,7 +112,7 @@ paths:
       # description:
       # operationId: getUserById
       parameters:
-        - name: userid
+        - name: id
           in: path
           description: User ID
           required: true
@@ -134,9 +134,9 @@ paths:
       # description: This can only be done by the logged in user.
       # operationId: createUser
       parameters:
-        - name: userid
+        - name: id
           in: path
-          description: User ID
+          description: User id
           required: true
           schema:
             type: integer
@@ -151,6 +151,64 @@ paths:
                 name:
                   type: string
                   example: 'Arman Maulalan'
+                # address:
+                #   type: string
+                #   example: 'Jl. Pinang Kayu no.30 Bandung'
+                # profilephoto:
+                #   type: string
+                # coverphoto:
+                #   type: string
+      responses:
+        default:
+          description: successful operation
+          content: {}
+      x-codegen-request-body-name: body                
+
+  /users/profile/username/{username}:
+    get:
+      tags:
+        - Profile
+      summary: Gets profile by Username
+      # description:
+      # operationId: getUserById
+      parameters:
+        - name: username
+          in: path
+          description: User name
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Profile'
+
+    put:
+      tags:
+      - Profile
+      summary: Update user profile
+      # description: This can only be done by the logged in user.
+      # operationId: createUser
+      parameters:
+        - name: username
+          in: path
+          description: User name
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: false
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  example: 'Arman Maulana'
                 address:
                   type: string
                   example: 'Jl. Pinang Kayu no.30 Bandung'
@@ -194,13 +252,13 @@ components:
         createdat:
           type: string
           format: date-time
+        updatedat:
+          type: string
+          format: date-time
 
     Profile:
       type: object
       properties:
-        id:
-          type: integer
-          format: int64
         name:
           type: string
         addres:
@@ -213,5 +271,8 @@ components:
           type: integer
           format: int64
         createdat:
+          type: string
+          format: date-time
+        updatedat:
           type: string
           format: date-time
